test/classes/initializers/phase1/useAfterInit/passMissingFn.good
passMissingFn.chpl:9: In initializer:
passMissingFn.chpl:11: error: unresolved call 'R.foo()'
